--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <h1>Guilherme Henriques Monteiro</h1>
     <section>
-      <p>Olá! Meu nome é Guilherme, sou estudante de Ciencia da Computação na UVV. Sempre fui apaixonado pela area de tecnologia, quando me formar quero trabalhar com python em data base e machine learning.</p>
+      <p>Olá! Meu nome é Guilherme, sou estudante de Ciência da Computação na UVV. Sempre fui apaixonado pela área de tecnologia, quando me formar quero trabalhar com python em data base e machine learning.</p>
       <a href="https://www.facebook.com/guilherme.henriquesmonteiro/" target="_blank">
         <i class="fab fa-facebook-f"></i>
       </a>
@@ -44,15 +44,15 @@
           <h4>Massagem relaxante</h4>
         </div>
         <div class="descrition">
-          <p>Curso de masssagem relaxante no instituto Atimo Danai em Brasília.</p>
+          <p>Curso de massagem relaxante no instituto Atimo Danai em Brasília.</p>
         </div>
       </article>
       <article class='course'>
         <div class='title'>
-          <h4>Exel proficional na udemy</h4>
+          <h4>Exel profissional na udemy</h4>
         </div>
         <div class="descrition">
-          <p>Aprendi a usar exel em nivel proficional.</p>
+          <p>Aprendi a usar exel em nível profissional.</p>
         </div>
       
         </div>
@@ -67,11 +67,11 @@
             <li>Exel</li>
             <li>Word</li>
             <li>PowerPoint</li>
-            <li>Trasncrição de audio</li>
+            <li>Transcrição de áudio</li>
           </ul>
         </div>
         <div class='column'>
-          <h4>Conhecimento basico</h4>
+          <h4>Conhecimento básico</h4>
           <ul>
             <li>HTML5</li>
             <li>CSS</li>
@@ -79,10 +79,10 @@
           </ul>
         </div>
         <div>
-          <h4>Linguas</h4>
-          <p> Portugues - Lingua de nascensa</p>
-          <p> Ingles - Avançado</p>
-          <p> Espanhol - Intermediario</p>
+          <h4>Línguas</h4>
+          <p> Português - Língua de nascença</p>
+          <p> Inglês - Avançado</p>
+          <p> Espanhol - Intermediário</p>
         </div>
       </div>
     </section>
@@ -91,10 +91,10 @@
       <h3>Educação</h3>
       <article>
         <div class='school'>
-          <span>2015-2018</span> <strong>Cecan- Brasilia</strong>
+          <span>2015-2018</span> <strong>Cecan- Brasília</strong>
         </div>
         <div class="descrition">
-          Ensino medio completo
+          Ensino médio completo
         </div>
       </article>
     </section>
